# onshape-mcp

./: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/onshape_mcp/: __init__.py  cache.py  client.py  rate_limiter.py  server.py
tests/: conftest.py  test_cache.py  test_client.py  test_rate_limiter.py  test_server.py
