[project]
name = "onshape-mcp"
version = "0.1.0"
description = "MCP server for Onshape CAD — semantic tools wrapping the Onshape API with rate limiting and caching"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "cachetools>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
onshape-mcp = "onshape_mcp.server:main"

[tool.setuptools.package-dir]
"onshape_mcp" = "src/onshape_mcp"

[tool.setuptools.packages.find]
where = ["src"]
